@@ -23,19 +23,8 @@
  */
 package com.formkiq.stacks.api.handler;
 
-import static com.formkiq.aws.services.lambda.ApiResponseStatus.SC_CREATED;
-import static com.formkiq.aws.services.lambda.ApiResponseStatus.SC_OK;
-import java.text.SimpleDateFormat;
-import java.time.Instant;
-import java.util.Date;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.Optional;
-import java.util.stream.Collectors;
 import com.amazonaws.services.lambda.runtime.LambdaLogger;
 import com.formkiq.aws.cognito.CognitoIdentityProviderService;
-import com.formkiq.aws.dynamodb.objects.DateUtil;
 import com.formkiq.aws.services.lambda.ApiAuthorization;
 import com.formkiq.aws.services.lambda.ApiGatewayRequestEvent;
 import com.formkiq.aws.services.lambda.ApiGatewayRequestEventUtil;
@@ -44,7 +33,16 @@ import com.formkiq.aws.services.lambda.ApiMapResponse;
 import com.formkiq.aws.services.lambda.ApiPermission;
 import com.formkiq.aws.services.lambda.ApiRequestHandlerResponse;
 import com.formkiq.module.lambdaservices.AwsServiceCache;
+import com.formkiq.stacks.api.transformers.UsersResponseToMap;
 import software.amazon.awssdk.services.cognitoidentityprovider.model.ListUsersInGroupResponse;
+
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
+
+import static com.formkiq.aws.services.lambda.ApiResponseStatus.SC_CREATED;
+import static com.formkiq.aws.services.lambda.ApiResponseStatus.SC_OK;
 
 /** {@link ApiGatewayRequestHandler} for "/groups/{groupName}/users". */
 public class GroupsUsersRequestHandler
@@ -68,14 +66,9 @@ public class GroupsUsersRequestHandler
     CognitoIdentityProviderService service =
         awsservice.getExtension(CognitoIdentityProviderService.class);
 
-    SimpleDateFormat df = DateUtil.getIsoDateFormatter();
     ListUsersInGroupResponse response = service.listUsersInGroup(groupName, token, limit);
 
-    List<Map<String, String>> users = response.users().stream()
-        .map(u -> Map.of("username", u.username(), "userStatus", u.userStatusAsString(),
-            "insertedDate", toString(df, u.userCreateDate()), "lastModifiedDate",
-            toString(df, u.userLastModifiedDate())))
-        .collect(Collectors.toList());
+    List<Map<String, Object>> users = response.users().stream().map(new UsersResponseToMap()).toList();
 
     Map<String, Object> map = new HashMap<>();
     map.put("users", users);
@@ -107,16 +100,6 @@ public class GroupsUsersRequestHandler
   @Override
   public String getRequestUrl() {
     return URL;
-  }
-
-  private String toString(final SimpleDateFormat df, final Instant date) {
-    String result = "";
-
-    if (date != null) {
-      result = df.format(Date.from(date));
-    }
-
-    return result;
   }
 
   @Override
